--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ public_html/wp-content/themes/twentyseventeen
 public_html/wp-content/themes/twentysixteen
 public_html/wp-content/themes/matemati4ka/**/01*.*
 .idea/
+login.txt
